# SphereTools

./: .gitattributes  .gitignore  .gitmodules  README.md  bytes  chat.txt  chat2.txt  chat3.txt  chestPackets.txt  clan.txt  clientCoordsSaved  containerItemMisc.txt  containerItems.txt  containerItems2.txt  coords.txt  damage.txt  data_packet_text.txt  death.txt  entTypes.txt  enterGame2.txt  enterGameDataTest.txt  enterNewGameData.txt  entityData  entityNamesCollected  findxor_output.txt  gameData.txt  group.txt  itemDb.xlsx  itemDbIds.txt  itemDecodeMisc.txt  itemDropOneSlot.txt  itemDropPacketByItemType.txt  itemDropPacketTest.txt  itemDropTwoSlots.txt  itemDrops.txt  itemInHand.txt  itemMove.txt  itemMove2.txt  itemNamesCollected  itemPacketBitShifts.txt  (+48 more)
BinaryCalc/: App.xaml  App.xaml.cs  BinaryCalc.sln  MainWindow.xaml  MainWindow.xaml.cs
ClientCoordTest/: ClientCoordTest.sln  Program.cs
ClientPacketDecode/: ClientPacketDecode.sln  Program.cs
GetEntityNames/: GetEntityNames.sln  Program.cs
GetFileLocks/: GetFileLocks.sln  Program.cs
HexToBinaryString/: HexToBinaryString.sln  Program.cs
ItemPacketPlayground/: ItemPacketPlayground.csproj  ItemPacketPlayground.sln  Program.cs
ItemPacketTools/: ItemPacketTools.cs  ItemPacketTools.csproj  ItemPacketTools.sln  Program.cs
Misc1/: Misc1.sln  Program.cs
MobHpByLevel/: MobHpByLevel.sln  Program.cs
ObjectPacketTools/: ObjectPacketTools.cs  ObjectPacketTools.csproj  ObjectType.cs
opengl/Nehe/: CMakeLists.txt  Nehe.cpp  Nehe.rc  Nehe.sln  Nehe.vcxproj  Nehe.vcxproj.filters  Resource.h
(+4200 files in other folders)
